# zsync-rs

./: .release-plz.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_control_file.rs  fuzz_matcher.rs  fuzz_rsum.rs
src/: assembly.rs  checksum.rs  control.rs  http.rs  lib.rs  matcher.rs  rsum.rs
