[package]
name = "zsync-rs"
version = "0.1.0"
edition = "2024"
description = "Efficient file transfer using rsync algorithm over HTTP"
license = "MIT"
keywords = ["zsync", "rsync", "http", "file-transfer", "delta"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "zsync"
path = "src/bin/zsync.rs"

[dependencies]
thiserror = "2.0.18"
md4 = "0.11.0-rc.2"
sha1 = "0.11.0-rc.5"
ureq = { version = "3.2.1" }
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
